# ws-stablecoin

./: .gitignore  LICENSE  README.md
programs/: Anchor.toml  package-lock.json  package.json
programs/programs/ws_stablecoin/: Cargo.toml
programs/programs/ws_stablecoin/src/: constants.rs  error.rs  lib.rs
programs/programs/ws_stablecoin/src/instructions/: mod.rs  util.rs
programs/programs/ws_stablecoin/src/instructions/admin/: initialize_config.rs  mod.rs  update_config.rs
programs/programs/ws_stablecoin/src/instructions/deposit/: deposit_collateral_and_mint_token.rs  mod.rs  util.rs
programs/programs/ws_stablecoin/src/instructions/withdraw/: liquidate.rs  mod.rs  redeem_collatoral_and_burn_tokens.rs  utils.rs
programs/programs/ws_stablecoin/src/states/: state.rs
programs/tests/: ws_stablecoin.ts
